opam-version: "2.0"
name: "dolog"
authors: "Francois Berenger"
maintainer: "unixjunkie@sdf.org"
license: "BSD-3-Clause"
synopsis: "The dumb OCaml logging library"
homepage: "https://github.com/UnixJunkie/dolog"
bug-reports: "https://github.com/UnixJunkie/dolog/issues"
dev-repo: "git+https://github.com/UnixJunkie/dolog.git"
depends: [
  "ocaml"
  "dune"
  "base-unix"
]
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
# url {
#   src: "https://github.com/UnixJunkie/dolog/archive/vXXX.tar.gz"
#   checksum: "md5=YYY"
# }
